complete adaptive styles

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <fieldset class="filter__group filter__group_choices">
             <div class="filter__choices choices">
               <button class="filter__select choices__btn">Цена</button>
-              <div class="choices__box">
+              <div class="choices__box filter__choices-box">
                 <fieldset class="filter__group">
                   <input class="filter__input-price" type="text" placeholder="от">
                   <input class="filter__input-price" type="text" placeholder="до">
@@ -99,7 +99,7 @@
 
             <div class="filter__choices choices">
               <button class="filter__select choices__btn">Тип товара</button>
-              <div class="choices__box">
+              <div class="choices__box filter__choices-box">
                 <ul class="filter__type-list">
                   <li class="filter__type-item">
                     <button class="filter__type-btn">Монобукеты</button>
@@ -132,11 +132,13 @@
                 <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
                 <div class="card__content">
                   <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <p class="card__date-delivery">сегодня в 14:00</p>
-                  <button class="card__btn">
-                    <span class="card__price">3000 ₽</span>
-                    <span class="card__btn-text">В корзину</span>
-                  </button>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня в 14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000 ₽</span>
+                      <span class="card__btn-text">В корзину</span>
+                    </button>
+                  </div>
                 </div>
               </article>
             </li>
@@ -145,11 +147,13 @@
                 <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
                 <div class="card__content">
                   <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <p class="card__date-delivery">сегодня в 14:00</p>
-                  <button class="card__btn">
-                    <span class="card__price">3000 ₽</span>
-                    <span class="card__btn-text">В корзину</span>
-                  </button>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня в 14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000 ₽</span>
+                      <span class="card__btn-text">В корзину</span>
+                    </button>
+                  </div>
                 </div>
               </article>
             </li>
@@ -158,11 +162,13 @@
                 <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
                 <div class="card__content">
                   <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <p class="card__date-delivery">сегодня в 14:00</p>
-                  <button class="card__btn">
-                    <span class="card__price">3000 ₽</span>
-                    <span class="card__btn-text">В корзину</span>
-                  </button>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня в 14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000 ₽</span>
+                      <span class="card__btn-text">В корзину</span>
+                    </button>
+                  </div>
                 </div>
               </article>
             </li>
@@ -171,11 +177,13 @@
                 <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
                 <div class="card__content">
                   <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <p class="card__date-delivery">сегодня в 14:00</p>
-                  <button class="card__btn">
-                    <span class="card__price">3000 ₽</span>
-                    <span class="card__btn-text">В корзину</span>
-                  </button>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня в 14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000 ₽</span>
+                      <span class="card__btn-text">В корзину</span>
+                    </button>
+                  </div>
                 </div>
               </article>
             </li>
@@ -184,11 +192,43 @@
                 <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
                 <div class="card__content">
                   <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <p class="card__date-delivery">сегодня в 14:00</p>
-                  <button class="card__btn">
-                    <span class="card__price">3000 ₽</span>
-                    <span class="card__btn-text">В корзину</span>
-                  </button>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня в 14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000 ₽</span>
+                      <span class="card__btn-text">В корзину</span>
+                    </button>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="goods__item">
+              <article class="goods__card card">
+                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
+                <div class="card__content">
+                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня в 14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000 ₽</span>
+                      <span class="card__btn-text">В корзину</span>
+                    </button>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="goods__item">
+              <article class="goods__card card">
+                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
+                <div class="card__content">
+                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
+                  <div class="card__footer">
+                    <p class="card__date-delivery">сегодня&nbsp;в&nbsp;14:00</p>
+                    <button class="card__btn">
+                      <span class="card__price">3000&nbsp;₽</span>
+                      <span class="card__btn-text">В&nbsp;корзину</span>
+                    </button>
+                  </div>
                 </div>
               </article>
             </li>
@@ -198,7 +238,7 @@
 
       <section class="subscribe">
         <div class="container">
-          <h2 class="subscribe__title">Подпишись на рассылку</h2>
+          <h2 class="subscribe__title">Подпишись на&nbsp;рассылку</h2>
           <form class="subscribe__form" action="#">
             <input class="subscribe__input" type="email" name="search" placeholder="E-mail">
   
