--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="filter__choices choices">
               <button class="filter__select choices__btn">Цена</button>
               <div class="choices__box filter__choices-box">
-                <fieldset class="filter__group">
+                <fieldset class="filter__price">
                   <input class="filter__input-price" type="text" placeholder="от">
                   <input class="filter__input-price" type="text" placeholder="до">
                 </fieldset>
@@ -124,9 +124,10 @@
       </section>
 
       <section class="goods">
-        <div class="container">
-          <h2 class="goods__title">Цветы</h2>
-          <ul class="goods__list">
+        <div class="container goods__container">
+          <div class="goods__box">
+            <h2 class="goods__title">Цветы</h2>
+            <ul class="goods__list">
             <li class="goods__item">
               <article class="goods__card card">
                 <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
@@ -232,7 +233,65 @@
                 </div>
               </article>
             </li>
-          </ul>
+            </ul>
+          </div>
+          <section class="cart">
+            <div class="cart__container">
+              <div class="cart__header">
+                <h3 class="cart__title">Ваш заказ</h3>
+
+                <button class="cart__close">
+                  <svg width="28" height="28" viewBox="0 0 28 28" fill="none"   xmlns="http://www.w3.org/2000/svg">
+                    <rect x="5" y="5.70715" width="1" height="25" transform="rotate(-45 5 5.70715)" fill="#D17D2F"/>
+                    <rect x="22.6777" y="5" width="1" height="25" transform="rotate(45 22.6777 5)" fill="#D17D2F"/>
+                  </svg>
+                </button>
+              </div>
+
+                <p class="cart__date-delivery">сегодня в 14:00</p>
+                <ul class="cart__list">
+                  <li class="cart__item">
+                    <img class="cart__image" src="/img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов">
+                    <h4 class="cart__item-title">Авторский букет из роз, диантусов и сухоцветов</h4>
+
+                    <div class="cart__counter">
+                      <button class="cart__counter-btn">-</button>
+                      <input class="cart__counter-input" type="number">
+                      <button class="cart__counter-btn">+</button>
+                    </div>
+                    <p class="cart__price">3000&nbsp;₽</p>
+                  </li>
+                  <li class="cart__item">
+                    <img class="cart__image" src="/img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов">
+                    <h4 class="cart__item-title">Авторский букет из роз, диантусов и сухоцветов</h4>
+
+                    <div class="cart__counter">
+                      <button class="cart__counter-btn">-</button>
+                      <input class="cart__counter-input" type="number">
+                      <button class="cart__counter-btn">+</button>
+                    </div>
+                    <p class="cart__price">3000&nbsp;₽</p>
+                  </li>
+                  <li class="cart__item">
+                    <img class="cart__image" src="/img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов">
+                    <h4 class="cart__item-title">Авторский букет из роз, диантусов и сухоцветов</h4>
+
+                    <div class="cart__counter">
+                      <button class="cart__counter-btn">-</button>
+                      <input class="cart__counter-input" type="number">
+                      <button class="cart__counter-btn">+</button>
+                    </div>
+                    <p class="cart__price">3000&nbsp;₽</p>
+                  </li>
+                </ul>
+
+                <div class="cart__footer">
+                  <button class="cart__oreder-btn">Оформить</button>
+                  <p class="cart__price">3000&nbsp;₽</p>
+                </div>
+
+            </div>
+          </section>
         </div>
       </section>
 
