--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="filter__choices choices">
               <button class="filter__select choices__btn">Тип товара</button>
-              <div class="choices__box filter__choices-box">
+              <div class="choices__box filter__choices-box filter__choices-box_type">
                 <ul class="filter__type-list">
                   <li class="filter__type-item">
                     <button class="filter__type-btn">Монобукеты</button>
@@ -256,7 +256,7 @@
 
                     <div class="cart__counter">
                       <button class="cart__counter-btn">-</button>
-                      <input class="cart__counter-input" type="number">
+                      <input class="cart__counter-input" type="number" max="99" min="0">
                       <button class="cart__counter-btn">+</button>
                     </div>
                     <p class="cart__price">3000&nbsp;₽</p>
@@ -267,7 +267,7 @@
 
                     <div class="cart__counter">
                       <button class="cart__counter-btn">-</button>
-                      <input class="cart__counter-input" type="number">
+                      <input class="cart__counter-input" type="number" max="99" min="0">
                       <button class="cart__counter-btn">+</button>
                     </div>
                     <p class="cart__price">3000&nbsp;₽</p>
@@ -278,7 +278,7 @@
 
                     <div class="cart__counter">
                       <button class="cart__counter-btn">-</button>
-                      <input class="cart__counter-input" type="number">
+                      <input class="cart__counter-input" type="number" max="99" min="0">
                       <button class="cart__counter-btn">+</button>
                     </div>
                     <p class="cart__price">3000&nbsp;₽</p>
