--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <img class="header__logo" src="img/logo.svg" alt="Логотип Mirano flower buetique" >
 
-        <button class="header__cart-button">0             </button>
+        <button class="header__cart-button">0</button>
       </div>
     </header>
 
@@ -129,113 +129,7 @@
         <div class="container goods__container">
           <div class="goods__box">
             <h2 class="goods__title">Цветы</h2>
-            <ul class="goods__list">
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня в 14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000 ₽</span>
-                      <span class="card__btn-text">В корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня в 14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000 ₽</span>
-                      <span class="card__btn-text">В корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня в 14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000 ₽</span>
-                      <span class="card__btn-text">В корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня в 14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000 ₽</span>
-                      <span class="card__btn-text">В корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня в 14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000 ₽</span>
-                      <span class="card__btn-text">В корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня в 14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000 ₽</span>
-                      <span class="card__btn-text">В корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            <li class="goods__item">
-              <article class="goods__card card">
-                <img class="card__image" src="img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов" >
-                <div class="card__content">
-                  <h3 class="card__title">Авторский букет из роз, диантусов и сухоцветов</h3>
-                  <div class="card__footer">
-                    <p class="card__date-delivery">сегодня&nbsp;в&nbsp;14:00</p>
-                    <button class="card__btn">
-                      <span class="card__price">3000&nbsp;₽</span>
-                      <span class="card__btn-text">В&nbsp;корзину</span>
-                    </button>
-                  </div>
-                </div>
-              </article>
-            </li>
-            </ul>
+            <ul class="goods__list"></ul>
           </div>
           <section class="cart">
             <div class="cart__container">
@@ -251,45 +145,11 @@
               </div>
 
                 <p class="cart__date-delivery">сегодня в 14:00</p>
-                <ul class="cart__list">
-                  <li class="cart__item">
-                    <img class="cart__image" src="/img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов">
-                    <h4 class="cart__item-title">Авторский букет из роз, диантусов и сухоцветов</h4>
-
-                    <div class="cart__counter">
-                      <button class="cart__counter-btn">-</button>
-                      <input class="cart__counter-input" type="number" max="99" min="0">
-                      <button class="cart__counter-btn">+</button>
-                    </div>
-                    <p class="cart__price">3000&nbsp;₽</p>
-                  </li>
-                  <li class="cart__item">
-                    <img class="cart__image" src="/img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов">
-                    <h4 class="cart__item-title">Авторский букет из роз, диантусов и сухоцветов</h4>
-
-                    <div class="cart__counter">
-                      <button class="cart__counter-btn">-</button>
-                      <input class="cart__counter-input" type="number" max="99" min="0">
-                      <button class="cart__counter-btn">+</button>
-                    </div>
-                    <p class="cart__price">3000&nbsp;₽</p>
-                  </li>
-                  <li class="cart__item">
-                    <img class="cart__image" src="/img/01.jpg" alt="Авторский букет из роз, диантусов и сухоцветов">
-                    <h4 class="cart__item-title">Авторский букет из роз, диантусов и сухоцветов</h4>
-
-                    <div class="cart__counter">
-                      <button class="cart__counter-btn">-</button>
-                      <input class="cart__counter-input" type="number" max="99" min="0">
-                      <button class="cart__counter-btn">+</button>
-                    </div>
-                    <p class="cart__price">3000&nbsp;₽</p>
-                  </li>
-                </ul>
+                <ul class="cart__list"></ul>
 
                 <div class="cart__footer">
                   <button class="cart__oreder-btn">Оформить</button>
-                  <p class="cart__price">3000&nbsp;₽</p>
+                  <p class="cart__price cart__price_total">0&nbsp;₽</p>
                 </div>
 
             </div>
