Offloaded Mirano server to glitch and render services. The layout of the goods order form was made and transferred to a separate file Order.jsx.  The order form is controlled in orderController.js. Styles for this form are written.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <ul class="cart__list"></ul>
 
                 <div class="cart__footer">
-                  <button class="cart__oreder-btn">Оформить</button>
+                  <button class="cart__order-btn">Оформить</button>
                   <p class="cart__price cart__price_total">0&nbsp;₽</p>
                 </div>
 
@@ -220,5 +220,7 @@
         <p class="footer__copyright">©MIRANO, 2024</p>
       </div>
     </footer>
+
+
   </body>
 </html>
